lab2/files star/service.yml
apiVersion: v1
kind: Service
metadata:
  name: lab2-hello
  labels:
    app: lab2
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app: lab2
