lab2/files star/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - hello-world.lab2
      secretName: secret-lab2
  rules:
    - host: "hello-world.lab2"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: lab2-hello
                port:
                  number: 80
